--- a/pc01/pc01_056.htm
+++ b/pc01/pc01_056.htm
@@ -53,12 +53,13 @@ return;}</script>
 <div id="p2" class="box female"><span class="name"><a href="pc01_054.htm">Caroline (Carrie) Ward</a></span><br />
 <span class="date">1886 -     </span>
 </div>
-<div id="p2ShowSC" class="showSC"><a href="#" onclick="javscript:toggleDiv('p2SC')">1 spouse 2 children <img src="../css/downarrow.png"></a></div>
+<div id="p2ShowSC" class="showSC"><a href="#" onclick="javscript:toggleDiv('p2SC')">2 spouses 2 children <img src="../css/downarrow.png"></a></div>
 <div id="p2SC" class="scView"><div class="scList"><ul><li class="male"><b><a href="pc01_008.htm">William Mason Crow</a></b></li>
 <ul>
 <li class="female"><a href="pc01_056.htm">Edna Mason Ward Crow</a></li>
 <li class="male"><a href="pc01_057.htm">William Thomas Mason Ward Crow</a></li>
 </ul>
+<li class="male"><b><a href="pc01_298.htm">Edgar Smith</a></b></li>
 </ul></div><a href="#" onclick="javscript:toggleDiv('p2SC')">Close <img src="../css/uparrow.png"></a>
 </div>
 <div class="connect" id="cnct2"></div>
