--- a/ps01/ps01_008.htm
+++ b/ps01/ps01_008.htm
@@ -67,8 +67,12 @@
 <div class="psSpousesTitle">Spouses</div>
 
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_009.htm"><img src="../pi01/pi01_009.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_009.htm">Mary Jane Smith</a> <a href="../pc01/pc01_009.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_009.htm">Mary Jane Smith</a> <a href="../pc01/pc01_009.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_009.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1881, Dugley, Yorkshire</span></div>
 
@@ -95,8 +99,12 @@
 </div>
 
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_054.htm"><img src="../pi01/pi01_054.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">2</span><span class="psText"><a href="ps01_054.htm">Caroline (Carrie) Ward</a> <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">2</span><span class="psText"><a href="ps01_054.htm">Caroline (Carrie) Ward</a> <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_054.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1886, Nottingham</span></div>
 </div>
@@ -117,8 +125,12 @@
 </div>
 
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_058.htm"><img src="../pi01/pi01_058.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">3</span><span class="psText"><a href="ps01_058.htm">Anne Mickman</a> <a href="../pc01/pc01_058.htm"><img src="../img/i_tree.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C4"> [4]</a></span></span></div>
+<div class="psName"><span class="psTitle">3</span><span class="psText"><a href="ps01_058.htm">Anne Mickman</a> <a href="../pc01/pc01_058.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_058.htm"><img src="../img/i_photo.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C4"> [4]</a></span></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1893, Scarborough</span></div>
 
