--- a/ps01/ps01_054.htm
+++ b/ps01/ps01_054.htm
@@ -24,8 +24,12 @@
 <div class="reportBodyWrapper">
 <div class="psPerson">
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_054.htm"><img src="../pi01/pi01_054.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">Caroline (Carrie) Ward <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">Caroline (Carrie) Ward <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_054.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1886, Nottingham</span></div>
 </div>
@@ -65,6 +69,18 @@
 <div class="psChild"><span class="colFirst">&nbsp;</span><span class="colSecond"><a href="ps01_057.htm">William Thomas Mason Ward</a>  (1911-1923)</span></div>
 </div>
 </div>
+
+<div class="psMRecord">
+<div class="psFields">
+<div class="psName"><span class="psTitle">2</span><span class="psText"><a href="ps01_298.htm">Edgar Smith</a> <a href="../pc01/pc01_298.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+</div>
+</div>
+
+<div class="psRecord">
+<div class="psFields">
+<div class="psEvent"><span class="colFirst">Marriage</span><span class="colSecond">Mar 1910, Barnsley<span class="citation"><a href="../wc_src.htm#C8"> [8]</a></span></span></div>
+</div>
+</div>
 </div>
 
 <div class="psNotesTitle">Notes for Caroline (Carrie) Ward</div>
@@ -74,7 +90,7 @@
 <!-- ignore=on -->
 
 <div class="psFooter">
-<div class="psFooterRecord"><span class="psModDate">Last Modified 17 Jan 2009</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
+<div class="psFooterRecord"><span class="psModDate">Last Modified 29 Jul 2017</span><span class="psCreated">Created 29 Jul 2017 by Steve</span></div>
 </div>
 <!-- ignore=off -->
 </div>
