--- a/ps01/ps01_058.htm
+++ b/ps01/ps01_058.htm
@@ -24,8 +24,12 @@
 <div class="reportBodyWrapper">
 <div class="psPerson">
 <div class="psFRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_058.htm"><img src="../pi01/pi01_058.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">Anne Mickman <a href="../pc01/pc01_058.htm"><img src="../img/i_tree.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C4"> [4]</a></span></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">Anne Mickman <a href="../pc01/pc01_058.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_058.htm"><img src="../img/i_photo.png" alt="" /></a><span class="citation"><a href="../wc_src.htm#C4"> [4]</a></span></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1893, Scarborough</span></div>
 
