--- a/ps01/ps01_059.htm
+++ b/ps01/ps01_059.htm
@@ -24,8 +24,12 @@
 <div class="reportBodyWrapper">
 <div class="psPerson">
 <div class="psMRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_059.htm"><img src="../pi01/pi01_059.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">Name</span><span class="psText">Jim Robert Mason Crow <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">Name</span><span class="psText">Jim Robert Mason Crow <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_059.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1923, Barnsley, Yorkshire</span></div>
 
