--- a/wc01/wc01_022.htm
+++ b/wc01/wc01_022.htm
@@ -34,7 +34,7 @@
 <div class="wcSource"><span class="wcHusband">
 <div class="wcHusbandWrapper"><a href="../ps01/ps01_008.htm">William Mason Crow</a> <a href="../pc01/pc01_008.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_008.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span><span class="wcWife">
-<div class="wcWifeWrapper"><a href="../ps01/ps01_054.htm">Caroline (Carrie) Ward</a> <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcWifeWrapper"><a href="../ps01/ps01_054.htm">Caroline (Carrie) Ward</a> <a href="../pc01/pc01_054.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_054.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
@@ -44,7 +44,7 @@
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">20 Oct 1953, Barnsley, 8 Tune Street, S70 4NP, age: 74</span></div>
 </div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper">
+<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_054.htm"><img src="../pi01/pi01_054.jpg" width="125" height="66" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">1886, Nottingham</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">&nbsp;</span></div>
@@ -54,7 +54,7 @@
 <div class="wcSpouses"><span class="wcHSpouses">
 <div class="wcHSpousesWrapper"><span class="wcSpousesTitle">Spouses: </span><span class="wcSpousesData"><a href="wc01_004.htm">1</a></span><span class="wcSpousesData">, 2</span><span class="wcSpousesData">, <a href="wc01_023.htm">3</a></span></div>
 </span><span class="wcWSpouses">
-<div class="wcWSpousesWrapper"></div>
+<div class="wcWSpousesWrapper"><span class="wcSpousesTitle">Spouses: </span><span class="wcSpousesData">1</span><span class="wcSpousesData">, <a href="wc01_225.htm">2</a></span></div>
 </span></div>
 </div>
 
