--- a/wc01/wc01_024.htm
+++ b/wc01/wc01_024.htm
@@ -32,13 +32,13 @@
 <div class="wcMarriage"></div>
 
 <div class="wcSource"><span class="wcHusband">
-<div class="wcHusbandWrapper"><a href="../ps01/ps01_059.htm">Jim Robert Mason Crow</a> <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcHusbandWrapper"><a href="../ps01/ps01_059.htm">Jim Robert Mason Crow</a> <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_059.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span><span class="wcWife">
 <div class="wcWifeWrapper"><a href="../ps01/ps01_061.htm">Brenda Marshall</a> <a href="../pc01/pc01_061.htm"><img src="../img/i_tree.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
-<div class="wcHFactsWrapper">
+<div class="wcHFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_059.htm"><img src="../pi01/pi01_059.jpg" width="125" height="68" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">1923, Barnsley, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1977, age: 54</span></div>
