--- a/wc_idx/idx001.htm
+++ b/wc_idx/idx001.htm
@@ -593,6 +593,8 @@
 <a name="SMITH"></a>
 <div class="idxSur">Smith</div>
 
+<div class="idxName"><a href="../wc01/wc01_225.htm">Edgar</a></div>
+
 <div class="idxName"><a href="../wc01/wc01_125.htm">Eleanor</a><span class="idxDate"> (1888 - )</span></div>
 
 <div class="idxName"><a href="../wc01/wc01_006.htm">Frederick</a><span class="idxDate"> (1856 - )</span></div>
