--- a/wp01/wp01_008.htm
+++ b/wp01/wp01_008.htm
@@ -23,45 +23,41 @@
 
 <div class="wmTOCEntry"><a href="#c">WILLIAM MASON CROW birth 1879 Barnsley</a></div>
 
-<div class="wmTOCEntry"><a href="#d">Mary Jane Smith Birth 1883</a></div>
+<div class="wmTOCEntry"><a href="#d">Joan Crow b: 1924 d:1926</a></div>
 
-<div class="wmTOCEntry"><a href="#e">Annie Mickman Birth 1893</a></div>
+<div class="wmTOCEntry"><a href="#e">Jim Crow b: 1923</a></div>
 
-<div class="wmTOCEntry"><a href="#f">Joan_Crow_b-1924_d-1926_2017_07_19_18_09_47_717</a></div>
+<div class="wmTOCEntry"><a href="#f">img259_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#g">Jim_Crow_b-1923_2017_07_19_18_09_46_295</a></div>
+<div class="wmTOCEntry"><a href="#g">img258_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#h">img259_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#h">img257_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#i">img258_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#i">img256_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#j">img257_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#j">img255_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#k">img256_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#k">img254_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#l">img255_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#l">img070_edited-1</a></div>
 
-<div class="wmTOCEntry"><a href="#m">img254_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#m">Carrie Ward Marriage 1910</a></div>
 
-<div class="wmTOCEntry"><a href="#n">img070_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#n">Joan CROW m) Mickman - Death 1926</a></div>
 
-<div class="wmTOCEntry"><a href="#o">carrie_ward_2017_07_19_18_09_32_561</a></div>
+<div class="wmTOCEntry"><a href="#o">Joan CROW -Mickman Birth 1924</a></div>
 
-<div class="wmTOCEntry"><a href="#p">1926D1-C-0185 Joan CROW -Mickman Death 1926</a></div>
+<div class="wmTOCEntry"><a href="#p">1911Census - WM Crow + C Ward</a></div>
 
-<div class="wmTOCEntry"><a href="#q">1924B3-C-0267 Joan CROW -Mickman Birth 1924</a></div>
+<div class="wmTOCEntry"><a href="#q">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</a></div>
 
-<div class="wmTOCEntry"><a href="#r">1911c WM Crow - C Ward</a></div>
+<div class="wmTOCEntry"><a href="#r">1899 WM CROW Marriage</a></div>
 
-<div class="wmTOCEntry"><a href="#s">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</a></div>
+<div class="wmTOCEntry"><a href="#s">1897 WM Crow Birth Cert</a></div>
 
-<div class="wmTOCEntry"><a href="#t">1899m2-083 WM CROW Marriage</a></div>
+<div class="wmTOCEntry"><a href="#t">Mary Jane SMITH Birth</a></div>
 
-<div class="wmTOCEntry"><a href="#u">1897 WM Crow Birth Cert</a></div>
-
-<div class="wmTOCEntry"><a href="#v">1883B3-S-0510 Mary Jane SMITH Birth</a></div>
-
-<div class="wmTOCEntry"><a href="#w">1879b WM Crow</a></div>
+<div class="wmTOCEntry"><a href="#u">1879 Birth WM Crow</a></div>
 </div>
 
 <div class="wmItems">
@@ -122,7 +118,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">Mary Jane Smith Birth 1883</div>
+<div class="wmItemTitleData">Joan Crow b: 1924 d:1926</div>
 </div>
 </div>
 
@@ -138,7 +134,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">Annie Mickman Birth 1893</div>
+<div class="wmItemTitleData">Jim Crow b: 1923</div>
 </div>
 </div>
 
@@ -149,12 +145,12 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPDF"><a href='#' OnClick='window.open("p01_008f.pdf","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+<div class="wmPicture"><img src="p01_008f.jpg" alt="" /></div>
 </div>
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">Joan_Crow_b-1924_d-1926_2017_07_19_18_09_47_717</div>
+<div class="wmItemTitleData">img259_edited-1</div>
 </div>
 </div>
 
@@ -165,12 +161,12 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPDF"><a href='#' OnClick='window.open("p01_008g.pdf","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+<div class="wmPicture"><img src="p01_008g.jpg" alt="" /></div>
 </div>
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">Jim_Crow_b-1923_2017_07_19_18_09_46_295</div>
+<div class="wmItemTitleData">img258_edited-1</div>
 </div>
 </div>
 
@@ -186,7 +182,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img259_edited-1</div>
+<div class="wmItemTitleData">img257_edited-1</div>
 </div>
 </div>
 
@@ -202,7 +198,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img258_edited-1</div>
+<div class="wmItemTitleData">img256_edited-1</div>
 </div>
 </div>
 
@@ -218,7 +214,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img257_edited-1</div>
+<div class="wmItemTitleData">img255_edited-1</div>
 </div>
 </div>
 
@@ -234,7 +230,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img256_edited-1</div>
+<div class="wmItemTitleData">img254_edited-1</div>
 </div>
 </div>
 
@@ -250,7 +246,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img255_edited-1</div>
+<div class="wmItemTitleData">img070_edited-1</div>
 </div>
 </div>
 
@@ -261,12 +257,12 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008m.jpg" alt="" /></div>
+<div class="wmPDF"><a href='#' OnClick='window.open("../sm01/s01_008a.pdf","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img254_edited-1</div>
+<div class="wmItemTitleData">Carrie Ward Marriage 1910</div>
 </div>
 </div>
 
@@ -282,7 +278,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img070_edited-1</div>
+<div class="wmItemTitleData">Joan CROW m) Mickman - Death 1926</div>
 </div>
 </div>
 
@@ -293,12 +289,12 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPDF"><a href='#' OnClick='window.open("p01_008o.pdf","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+<div class="wmPicture"><img src="p01_008o.jpg" alt="" /></div>
 </div>
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">carrie_ward_2017_07_19_18_09_32_561</div>
+<div class="wmItemTitleData">Joan CROW -Mickman Birth 1924</div>
 </div>
 </div>
 
@@ -314,7 +310,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1926D1-C-0185 Joan CROW -Mickman Death 1926</div>
+<div class="wmItemTitleData">1911Census - WM Crow + C Ward</div>
 </div>
 </div>
 
@@ -330,7 +326,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1924B3-C-0267 Joan CROW -Mickman Birth 1924</div>
+<div class="wmItemTitleData">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</div>
 </div>
 </div>
 
@@ -346,7 +342,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1911c WM Crow - C Ward</div>
+<div class="wmItemTitleData">1899 WM CROW Marriage</div>
 </div>
 </div>
 
@@ -362,7 +358,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</div>
+<div class="wmItemTitleData">1897 WM Crow Birth Cert</div>
 </div>
 </div>
 
@@ -378,7 +374,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1899m2-083 WM CROW Marriage</div>
+<div class="wmItemTitleData">Mary Jane SMITH Birth</div>
 </div>
 </div>
 
@@ -394,44 +390,16 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1897 WM Crow Birth Cert</div>
+<div class="wmItemTitleData">1879 Birth WM Crow</div>
 </div>
 </div>
 
 <div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
 </div>
-
-<div class="wmItemRecord"><a name="v"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008v.jpg" alt="" /></div>
-</div>
 </div>
 
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1883B3-S-0510 Mary Jane SMITH Birth</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="w"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008w.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1879b WM Crow</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
+<div class="wmRelated">
+<div class="wmRelatedRecord"><span class="wmRelatedTitle">Related Media Pages:</span><span class="wmRelatedPages"><a href="wp01_009.htm">Mary Jane Smith</a><br /><a href="wp01_054.htm">Caroline (Carrie) Ward</a><br /><a href="wp01_058.htm">Anne Mickman</a></span></div>
 </div>
 </div>
 </div>
