--- a/ps01/ps01_061.htm
+++ b/ps01/ps01_061.htm
@@ -37,8 +37,12 @@
 <div class="psSpousesTitle">Spouses</div>
 
 <div class="psMRecord">
+<div class="psPicture">
+<div class="psPictureA"><a href="../wp01/wp01_059.htm"><img src="../pi01/pi01_059.jpg" alt="" /></a></div>
+</div>
+
 <div class="psFields">
-<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_059.htm">Jim Robert Mason Crow</a> <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a></span></div>
+<div class="psName"><span class="psTitle">1</span><span class="psText"><a href="ps01_059.htm">Jim Robert Mason Crow</a> <a href="../pc01/pc01_059.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_059.htm"><img src="../img/i_photo.png" alt="" /></a></span></div>
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">1923, Barnsley, Yorkshire</span></div>
 
