--- a/wc01/wc01_131.htm
+++ b/wc01/wc01_131.htm
@@ -34,13 +34,13 @@
 <div class="wcSource"><span class="wcHusband">
 <div class="wcHusbandWrapper"></div>
 </span><span class="wcWife">
-<div class="wcWifeWrapper"><a href="../ps01/ps01_060.htm">Joan Mason Crow</a> <a href="../pc01/pc01_060.htm"><img src="../img/i_tree.png" alt="" /></a></div>
+<div class="wcWifeWrapper"><a href="../ps01/ps01_060.htm">Joan Mason Crow</a> <a href="../pc01/pc01_060.htm"><img src="../img/i_tree.png" alt="" /></a> <a href="../wp01/wp01_060.htm"><img src="../img/i_photo.png" alt="" /></a></div>
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
 <div class="wcHFactsWrapper"></div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper">
+<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_060.htm"><img src="../pi01/pi01_060.jpg" width="125" height="80" alt="" /></a></span>
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">1924, Barnsley, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1926, Barnsley, Yorkshire, age: 2</span></div>
