--- a/wp01/wp01_212.htm
+++ b/wp01/wp01_212.htm
@@ -17,7 +17,7 @@
 <div class="reportBody">
 <div class="reportBodyWrapper">
 <div class="wmTOC">
-<div class="wmTOCEntry"><a href="#a">1841c Michael Mason family</a></div>
+<div class="wmTOCEntry"><a href="#a">1841 Census-Michael Mason family</a></div>
 </div>
 
 <div class="wmItems">
@@ -30,7 +30,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1841c Michael Mason family</div>
+<div class="wmItemTitleData">1841 Census-Michael Mason family</div>
 </div>
 </div>
 
