--- a/wp01/wp01_008.htm
+++ b/wp01/wp01_008.htm
@@ -17,29 +17,29 @@
 <div class="reportBody">
 <div class="reportBodyWrapper">
 <div class="wmTOC">
-<div class="wmTOCEntry"><a href="#a">William Mason Crow</a></div>
+<div class="wmTOCEntry"><a href="#a">W.M.Crow in 1940s</a></div>
 
 <div class="wmTOCEntry"><a href="#b">WILLIAM MASON CROW marriage June Qtr 1899 to MARY JANE SMITH-0</a></div>
 
 <div class="wmTOCEntry"><a href="#c">WILLIAM MASON CROW birth 1879 Barnsley</a></div>
 
-<div class="wmTOCEntry"><a href="#d">Joan Crow b: 1924 d:1926</a></div>
+<div class="wmTOCEntry"><a href="#d">Joan Crow b:1924 d:1926</a></div>
 
 <div class="wmTOCEntry"><a href="#e">Jim Crow b: 1923</a></div>
 
-<div class="wmTOCEntry"><a href="#f">img259_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#f">W.M.Crow-1950s-2</a></div>
 
-<div class="wmTOCEntry"><a href="#g">img258_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#g">W.M.Crow-1950s-1</a></div>
 
-<div class="wmTOCEntry"><a href="#h">img257_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#h">W.M.Crow-1950s-3</a></div>
 
-<div class="wmTOCEntry"><a href="#i">img256_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#i">W.M.Crow-1950s-4</a></div>
 
-<div class="wmTOCEntry"><a href="#j">img255_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#j">W.M.Crow-1950s-5</a></div>
 
-<div class="wmTOCEntry"><a href="#k">img254_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#k">W.M.Crow-1950s-6</a></div>
 
-<div class="wmTOCEntry"><a href="#l">img070_edited-1</a></div>
+<div class="wmTOCEntry"><a href="#l">WM Crow-Allotment on Ward Green Hill-1940s</a></div>
 
 <div class="wmTOCEntry"><a href="#m">Carrie Ward Marriage 1910</a></div>
 
@@ -47,17 +47,17 @@
 
 <div class="wmTOCEntry"><a href="#o">Joan CROW -Mickman Birth 1924</a></div>
 
-<div class="wmTOCEntry"><a href="#p">1911Census - WM Crow + C Ward</a></div>
+<div class="wmTOCEntry"><a href="#p">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</a></div>
 
-<div class="wmTOCEntry"><a href="#q">1901 Census - WILLIAM MASON CROW family at 4 Clifton St, Barnsley</a></div>
+<div class="wmTOCEntry"><a href="#q">1899 WM CROW Marriage</a></div>
 
-<div class="wmTOCEntry"><a href="#r">1899 WM CROW Marriage</a></div>
+<div class="wmTOCEntry"><a href="#r">Mary Jane SMITH Birth</a></div>
 
-<div class="wmTOCEntry"><a href="#s">1897 WM Crow Birth Cert</a></div>
+<div class="wmTOCEntry"><a href="#s">1879 Birth WM Crow</a></div>
 
-<div class="wmTOCEntry"><a href="#t">Mary Jane SMITH Birth</a></div>
+<div class="wmTOCEntry"><a href="#t">1879 Birth Cert-W.M. Crow</a></div>
 
-<div class="wmTOCEntry"><a href="#u">1879 Birth WM Crow</a></div>
+<div class="wmTOCEntry"><a href="#u">1911 Census-W.M.Crow &amp; C.Ward</a></div>
 </div>
 
 <div class="wmItems">
@@ -70,7 +70,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">William Mason Crow</div>
+<div class="wmItemTitleData">W.M.Crow in 1940s</div>
 </div>
 </div>
 
@@ -118,7 +118,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">Joan Crow b: 1924 d:1926</div>
+<div class="wmItemTitleData">Joan Crow b:1924 d:1926</div>
 </div>
 </div>
 
@@ -150,7 +150,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img259_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-2</div>
 </div>
 </div>
 
@@ -166,7 +166,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img258_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-1</div>
 </div>
 </div>
 
@@ -182,7 +182,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img257_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-3</div>
 </div>
 </div>
 
@@ -198,7 +198,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img256_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-4</div>
 </div>
 </div>
 
@@ -214,7 +214,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img255_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-5</div>
 </div>
 </div>
 
@@ -230,7 +230,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img254_edited-1</div>
+<div class="wmItemTitleData">W.M.Crow-1950s-6</div>
 </div>
 </div>
 
@@ -246,7 +246,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">img070_edited-1</div>
+<div class="wmItemTitleData">WM Crow-Allotment on Ward Green Hill-1940s</div>
 </div>
 </div>
 
@@ -305,23 +305,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008p.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1911Census - WM Crow + C Ward</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="q"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008q.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008p.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -333,11 +317,11 @@
 <div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
 </div>
 
-<div class="wmItemRecord"><a name="r"></a>
+<div class="wmItemRecord"><a name="q"></a>
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008r.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008q.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -349,27 +333,11 @@
 <div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
 </div>
 
-<div class="wmItemRecord"><a name="s"></a>
+<div class="wmItemRecord"><a name="r"></a>
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008s.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1897 WM Crow Birth Cert</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="t"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008t.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008r.tif","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -381,16 +349,54 @@
 <div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
 </div>
 
-<div class="wmItemRecord"><a name="u"></a>
+<div class="wmItemRecord"><a name="s"></a>
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_008u.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008s.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
 <div class="wmItemTitle">
 <div class="wmItemTitleData">1879 Birth WM Crow</div>
+</div>
+</div>
+
+<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
+</div>
+
+<div class="wmItemRecord"><a name="t"></a>
+<div class="wmItem">
+<div class="wmItemMedia">
+<div class="wmItemMediaWrapper">
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008t.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+</div>
+</div>
+
+<div class="wmItemTitle">
+<div class="wmItemTitleData">1879 Birth Cert-W.M. Crow</div>
+</div>
+</div>
+
+<div class="wmItemMemo">
+<div class="wmItemMemoRecord">
+<div class="wmItemMemoData">Birth regis</div>
+</div>
+</div>
+
+<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
+</div>
+
+<div class="wmItemRecord"><a name="u"></a>
+<div class="wmItem">
+<div class="wmItemMedia">
+<div class="wmItemMediaWrapper">
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_008u.JPG","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+</div>
+</div>
+
+<div class="wmItemTitle">
+<div class="wmItemTitleData">1911 Census-W.M.Crow &amp; C.Ward</div>
 </div>
 </div>
 
