--- a/ps01/ps01_207.htm
+++ b/ps01/ps01_207.htm
@@ -33,6 +33,12 @@
 
 <div class="psEvent"><span class="colFirst">Birth</span><span class="colSecond">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
+<div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1851 Age: 8</span></div>
+
+<div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1861 Age: 18</span></div>
+
+<div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1871 Age: 28</span></div>
+
 <div class="psEvent"><span class="colFirst">Home</span><span class="colSecond">1881, Barnsley, 1 Queen Street, Court 4 Age: 38</span></div>
 
 <div class="psEvent"><span class="colFirst">Home Memo</span><span class="colSecond">Darfield or Thurnscoe.  Or perhaps in the town centre just off Cheapside?</span></div>
@@ -46,8 +52,6 @@
 <div class="psEvent"><span class="colFirst">Home Memo</span><span class="colSecond">Living next door to her son, William Mason Crow.  House is close to Waltham St (past residence).  Close to Sheffield Rd (Oakwell side) &amp; Cemetery Rd.  House is also close to birthplaces of both Percy Crow (Tune Street) and Leslie Crow (Quarry Street).</span></div>
 
 <div class="psEvent"><span class="colFirst">Census</span><span class="colSecond">1911 Age: 68</span></div>
-
-<div class="psEvent"><span class="colFirst">Census Memo</span><span class="colSecond">^^</span></div>
 
 <div class="psEvent"><span class="colFirst">Death</span><span class="colSecond">1920, Barnsley, Yorkshire Age: 77</span></div>
 
@@ -156,7 +160,7 @@
 <!-- ignore=on -->
 
 <div class="psFooter">
-<div class="psFooterRecord"><span class="psModDate">Last Modified 27 Jul 2017</span><span class="psCreated">Created 30 Jul 2017 by Steve</span></div>
+<div class="psFooterRecord"><span class="psModDate">Last Modified 30 Jul 2017</span><span class="psCreated">Created 30 Jul 2017 by Steve</span></div>
 </div>
 <!-- ignore=off -->
 </div>
