--- a/wp01/wp01_208.htm
+++ b/wp01/wp01_208.htm
@@ -17,17 +17,15 @@
 <div class="reportBody">
 <div class="reportBodyWrapper">
 <div class="wmTOC">
-<div class="wmTOCEntry"><a href="#a">1911c T Mason</a></div>
+<div class="wmTOCEntry"><a href="#a">1851 Census Thomas Mason</a></div>
 
-<div class="wmTOCEntry"><a href="#b">1891c Thomas Mason-Eliza Crow</a></div>
+<div class="wmTOCEntry"><a href="#b">1861 Census Thomas Mason with Mother Sarah Mason</a></div>
 
-<div class="wmTOCEntry"><a href="#c">1881c Thomas Mason</a></div>
+<div class="wmTOCEntry"><a href="#c">1881 Census Thomas Mason with Eliza his wife</a></div>
 
-<div class="wmTOCEntry"><a href="#d">1861c Thomas Mason</a></div>
+<div class="wmTOCEntry"><a href="#d">1891 Census Thomas Mason-Eliza Crow</a></div>
 
-<div class="wmTOCEntry"><a href="#e">1851c Thomas Mason</a></div>
-
-<div class="wmTOCEntry"><a href="#f">1846 thomas mason birth</a></div>
+<div class="wmTOCEntry"><a href="#e">1911 Census Thomas Mason and Eliza Mason</a></div>
 </div>
 
 <div class="wmItems">
@@ -40,7 +38,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1911c T Mason</div>
+<div class="wmItemTitleData">1851 Census Thomas Mason</div>
 </div>
 </div>
 
@@ -56,7 +54,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1891c Thomas Mason-Eliza Crow</div>
+<div class="wmItemTitleData">1861 Census Thomas Mason with Mother Sarah Mason</div>
 </div>
 </div>
 
@@ -72,7 +70,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1881c Thomas Mason</div>
+<div class="wmItemTitleData">1881 Census Thomas Mason with Eliza his wife</div>
 </div>
 </div>
 
@@ -88,7 +86,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1861c Thomas Mason</div>
+<div class="wmItemTitleData">1891 Census Thomas Mason-Eliza Crow</div>
 </div>
 </div>
 
@@ -104,23 +102,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1851c Thomas Mason</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="f"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208f.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1846 thomas mason birth</div>
+<div class="wmItemTitleData">1911 Census Thomas Mason and Eliza Mason</div>
 </div>
 </div>
 
