--- a/wp01/wp01_220.htm
+++ b/wp01/wp01_220.htm
@@ -247,7 +247,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_220k.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_027a.JPG","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -279,7 +279,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_027c.png","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
+<div class="wmPicture"><img src="p01_220m.jpg" alt="" /></div>
 </div>
 </div>
 
@@ -503,7 +503,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_220aa.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_031c.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -519,7 +519,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_220ab.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_031d.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -535,7 +535,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_220ac.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_031e.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
