--- a/wp01/wp01_207.htm
+++ b/wp01/wp01_207.htm
@@ -17,21 +17,7 @@
 <div class="reportBody">
 <div class="reportBodyWrapper">
 <div class="wmTOC">
-<div class="wmTOCEntry"><a href="#a">1874 eliza nussey marriage</a></div>
-
-<div class="wmTOCEntry"><a href="#b">1871c Ellis</a></div>
-
-<div class="wmTOCEntry"><a href="#c">1869 Ellis deaths</a></div>
-
-<div class="wmTOCEntry"><a href="#d">1867 Ellis deaths</a></div>
-
-<div class="wmTOCEntry"><a href="#e">1861c Ellis</a></div>
-
-<div class="wmTOCEntry"><a href="#f">1861c Ellis page2</a></div>
-
-<div class="wmTOCEntry"><a href="#g">1861c Eliza Ellis</a></div>
-
-<div class="wmTOCEntry"><a href="#h">1861c Eliza Ellis Wombwell</a></div>
+<div class="wmTOCEntry"><a href="#a">1874 Eliza Nussey Marriage</a></div>
 </div>
 
 <div class="wmItems">
@@ -44,119 +30,7 @@
 </div>
 
 <div class="wmItemTitle">
-<div class="wmItemTitleData">1874 eliza nussey marriage</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="b"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207b.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1871c Ellis</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="c"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207c.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1869 Ellis deaths</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="d"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207d.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1867 Ellis deaths</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="e"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207e.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1861c Ellis</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="f"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207f.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1861c Ellis page2</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="g"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207g.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1861c Eliza Ellis</div>
-</div>
-</div>
-
-<div class="wmTop"><a href="#TOP"><img src="../img/i_top.png" border=0 alt="" /></a></div>
-</div>
-
-<div class="wmItemRecord"><a name="h"></a>
-<div class="wmItem">
-<div class="wmItemMedia">
-<div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_207h.jpg" alt="" /></div>
-</div>
-</div>
-
-<div class="wmItemTitle">
-<div class="wmItemTitleData">1861c Eliza Ellis Wombwell</div>
+<div class="wmItemTitleData">1874 Eliza Nussey Marriage</div>
 </div>
 </div>
 
