--- a/wc01/wc01_074.htm
+++ b/wc01/wc01_074.htm
@@ -38,13 +38,13 @@
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
-<div class="wcHFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_208.htm"><img src="../pi01/pi01_208.jpg" width="125" height="81" alt="" /></a></span>
+<div class="wcHFactsWrapper">
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">1846, Derbyshire, Holbrook</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1919, Barnsley, Yorkshire, age: 73</span></div>
 </div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_207.htm"><img src="../pi01/pi01_207.jpg" width="125" height="198" alt="" /></a></span>
+<div class="wcWFactsWrapper">
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1920, Barnsley, Yorkshire, age: 77</span></div>
