--- a/wc01/wc01_075.htm
+++ b/wc01/wc01_075.htm
@@ -38,7 +38,7 @@
 </span></div>
 
 <div class="wcFacts"><span class="wcHFacts">
-<div class="wcHFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_212.htm"><img src="../pi01/pi01_212.jpg" width="125" height="96" alt="" /></a></span>
+<div class="wcHFactsWrapper">
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">abt 1796, Derbyshire, Holbrook</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">bef 1851, Derbyshire, Holbrook, age: 55</span></div>
