--- a/wc01/wc01_084.htm
+++ b/wc01/wc01_084.htm
@@ -44,7 +44,7 @@
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">Dec 1873, Barnsley, Yorkshire, age: 38</span></div>
 </div>
 </span><span class="wcWFacts">
-<div class="wcWFactsWrapper"><span class="wcFactPicture"><a href="../wp01/wp01_207.htm"><img src="../pi01/pi01_207.jpg" width="125" height="198" alt="" /></a></span>
+<div class="wcWFactsWrapper">
 <div class="wcFactsRecord"><span class="wcFactTitle">b. </span><span class="wcFactData">Mar 1842, Billingley, Rotherham, Yorkshire</span></div>
 
 <div class="wcFactsRecord"><span class="wcFactTitle">d. </span><span class="wcFactData">1920, Barnsley, Yorkshire, age: 77</span></div>
