--- a/wp01/wp01_009.htm
+++ b/wp01/wp01_009.htm
@@ -43,7 +43,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_009b.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_009b.tif","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
