--- a/wp01/wp01_208.htm
+++ b/wp01/wp01_208.htm
@@ -33,7 +33,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208a.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_208a.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -49,7 +49,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208b.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_208b.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -65,7 +65,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208c.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_208c.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -81,7 +81,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208d.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_208d.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
@@ -97,7 +97,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_208e.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("p01_208e.JPG","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
