--- a/wp01/wp01_212.htm
+++ b/wp01/wp01_212.htm
@@ -25,7 +25,7 @@
 <div class="wmItem">
 <div class="wmItemMedia">
 <div class="wmItemMediaWrapper">
-<div class="wmPicture"><img src="p01_212a.jpg" alt="" /></div>
+<div class="wmDocument"><a href='#' OnClick='window.open("../sm01/s01_024a.jpg","wmedia")'><img src="../img/i_document.png" border=0 alt="" /></a></div>
 </div>
 </div>
 
